Fix misalignment by giving input `position: absolute`

--- a/client/web/src/nav/IconRadioButtons.scss
+++ b/client/web/src/nav/IconRadioButtons.scss
@@ -62,8 +62,7 @@
 
     &__input {
         opacity: 0;
-        width: 0;
-        height: 0;
+        position: absolute;
     }
 }
 
